Add Recipe 2 and 3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>"odin recipes"</h1>
-    <a href="recipe/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipe/lasagna.html">Lasagna</a></li>
+        <li><a href="recipe/dahipuri.html">Dahi puri</a></li>
+        <li><a href="recipe/coconutlogs.html">coconutlogs</a></li>
+</ul>
 </body>
 </html>
